--- a/ios/brave-ios/App/BraveWireGuard/Entitlements/BraveWireGuardRelease.entitlements
+++ b/ios/brave-ios/App/BraveWireGuard/Entitlements/BraveWireGuardRelease.entitlements
@@ -8,7 +8,7 @@
 	</array>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.$(MOZ_BUNDLE_ID)</string>
+		<string>group.com.ping.ios.browser</string>
 	</array>
 </dict>
 </plist>
