--- a/ios/brave-ios/App/BrowserIntents/Entitlements/BrowserIntentsDebug.entitlements
+++ b/ios/brave-ios/App/BrowserIntents/Entitlements/BrowserIntentsDebug.entitlements
@@ -4,7 +4,7 @@
 <dict>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.$(MOZ_BUNDLE_ID).unique</string>
+		<string>group.com.ping.ios.browser</string>
 	</array>
 </dict>
 </plist>
