--- a/ios/brave-ios/App/Configuration/Base.xcconfig
+++ b/ios/brave-ios/App/Configuration/Base.xcconfig
@@ -12,7 +12,7 @@ brave_version_build = 0
 
 #include "../../../../../out/ios_current_link/args.xcconfig"
 
-FRAMEWORK_BASE_BUNDLE_ID = com.brave
+FRAMEWORK_BASE_BUNDLE_ID = com.ping
 BASE_BUNDLE_ID = $(FRAMEWORK_BASE_BUNDLE_ID).ios
 
 DEVELOPMENT_TEAM = KL8N8XSYF4
