--- a/ios/brave-ios/App/Configuration/Debug.xcconfig
+++ b/ios/brave-ios/App/Configuration/Debug.xcconfig
@@ -9,8 +9,8 @@ MOZ_BUNDLE_DISPLAY_NAME = Ping
 BRAVE_URL_SCHEME = brave-debug
 
 // Bundle Identifier (Same as nightly)
-MOZ_BUNDLE_ID = $(BASE_BUNDLE_ID).BrowserBeta
-BRAVE_GROUP_ID = group.$(MOZ_BUNDLE_ID).unique
+MOZ_BUNDLE_ID = $(BASE_BUNDLE_ID).browser
+BRAVE_GROUP_ID = group.$(MOZ_BUNDLE_ID)
 
 // Flag to indicate if we want to include the debug settings bundle or not
 INCLUDE_SETTINGS_BUNDLE = YES
