--- a/ios/brave-ios/App/iOS/Entitlements/Beta.entitlements
+++ b/ios/brave-ios/App/iOS/Entitlements/Beta.entitlements
@@ -2,17 +2,15 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>com.apple.developer.carplay-audio</key>
-	<true/>
 	<key>aps-environment</key>
 	<string>production</string>
-	<key>com.apple.developer.playable-content</key>
-	<true/>
 	<key>com.apple.developer.associated-domains</key>
 	<array>
 		<string>applinks:vpn.brave.com</string>
 	</array>
 	<key>com.apple.developer.authentication-services.autofill-credential-provider</key>
+	<true/>
+	<key>com.apple.developer.carplay-audio</key>
 	<true/>
 	<key>com.apple.developer.networking.networkextension</key>
 	<array>
@@ -26,13 +24,15 @@
 	<array>
 		<string>TAG</string>
 	</array>
+	<key>com.apple.developer.playable-content</key>
+	<true/>
 	<key>com.apple.developer.siri</key>
+	<true/>
+	<key>com.apple.developer.web-browser</key>
 	<true/>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.$(MOZ_BUNDLE_ID)</string>
+		<string>group.com.ping.ios.browser</string>
 	</array>
-	<key>com.apple.developer.web-browser</key>
-	<true/>
 </dict>
 </plist>
