--- a/ios/brave-ios/App/iOS/Entitlements/Release.entitlements
+++ b/ios/brave-ios/App/iOS/Entitlements/Release.entitlements
@@ -26,7 +26,7 @@
 	<true/>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.$(MOZ_BUNDLE_ID)</string>
+		<string>group.com.ping.ios.browser</string>
 	</array>
 </dict>
 </plist>
