--- a/ios/brave-ios/App/iOS/Supporting Files/Info.plist
+++ b/ios/brave-ios/App/iOS/Supporting Files/Info.plist
@@ -32,7 +32,7 @@
 			<key>CFBundleTypeRole</key>
 			<string>Editor</string>
 			<key>CFBundleURLName</key>
-			<string>com.brave.ios</string>
+			<string>com.ping.ios</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
 				<string>http</string>
@@ -88,8 +88,8 @@
 		<string>OpenWebsiteIntent</string>
 		<string>ShortcutsConfigurationIntent</string>
 		<string>StatsConfigurationIntent</string>
-		<string>com.brave.ios.browser-scene</string>
-		<string>com.brave.ios.browsing</string>
+		<string>com.ping.ios.browser-scene</string>
+		<string>com.ping.ios.browsing</string>
 	</array>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
