--- a/browser/ui/BUILD.gn
+++ b/browser/ui/BUILD.gn
@@ -1352,8 +1352,13 @@ source_set("ui") {
 source_set("unit_tests") {
   if (!is_android) {
     testonly = true
-    sources = []
-    deps = []
+    sources = [ "brave_layout_constants_unittest.cc" ]
+    deps = [
+      "//chrome/browser/ui",
+      "//testing/gtest",
+      "//ui/base:test_support",
+      "//ui/gfx",
+    ]
 
     if (enable_brave_vpn) {
       sources += [ "views/toolbar/brave_vpn_button_unittest.cc" ]
