feat(wallet): Max Slippage Modal

--- a/ui/webui/resources/BUILD.gn
+++ b/ui/webui/resources/BUILD.gn
@@ -301,6 +301,7 @@ leo_icons = [
   "notification-off.svg",
   "notification.svg",
   "pause-filled.svg",
+  "percent.svg",
   "picture-in-picture.svg",
   "play-filled.svg",
   "plus-add-circle.svg",
