--- a/package.json
+++ b/package.json
@@ -59,6 +59,10 @@
   "bugs": {
     "url": "https://github.com/brave/brave-browser/issues"
   },
+  "engines": {
+    "node": ">=20.0.0 <22.0.0",
+    "npm": ">=10.0.0"
+  },
   "homepage": "https:/github.com/brave/brave-core#readme",
   "config": {
     "projects": {
@@ -148,6 +152,7 @@
     "recharts": "2.12.4",
     "redux": "4.1.0",
     "sass-loader": "10.4.1",
+    "semver": "7.6.2",
     "sinon": "7.5.0",
     "storybook": "8.0.1",
     "stream-browserify": "3.0.0",
