--- a/browser/brave_wallet/BUILD.gn
+++ b/browser/brave_wallet/BUILD.gn
@@ -198,6 +198,7 @@ source_set("unit_tests") {
     "//chrome/browser",
     "//chrome/browser/permissions",
     "//chrome/test:test_support",
+    "//components/country_codes",
     "//testing/gtest",
   ]
   if (!is_android) {
