--- a/components/brave_wallet/browser/test/BUILD.gn
+++ b/components/brave_wallet/browser/test/BUILD.gn
@@ -105,13 +105,6 @@ source_set("brave_wallet_unit_tests") {
     "//brave/components/brave_wallet/browser/zcash/zcash_serializer_unittest.cc",
     "//brave/components/brave_wallet/browser/zcash/zcash_wallet_service_unittest.cc",
   ]
-  if (enable_orchard) {
-    sources += [ "//brave/components/brave_wallet/browser/internal/hd_key_zip32_unittest.cc" ]
-  }
-
-  if (enable_orchard) {
-    sources += [ "//brave/components/brave_wallet/browser/internal/orchard_bundle_manager_unittest.cc" ]
-  }
 
   deps = [
     ":test_data",
@@ -156,7 +149,10 @@ source_set("brave_wallet_unit_tests") {
   ]
 
   if (enable_orchard) {
-    sources += [ "//brave/components/brave_wallet/browser/internal/hd_key_zip32_unittest.cc" ]
+    sources += [
+      "//brave/components/brave_wallet/browser/internal/hd_key_zip32_unittest.cc",
+      "//brave/components/brave_wallet/browser/internal/orchard_bundle_manager_unittest.cc",
+    ]
     deps +=
         [ "//brave/components/brave_wallet/browser/internal:orchard_bundle" ]
   }
