--- a/components/skus/browser/rs/lib/Cargo.toml
+++ b/components/skus/browser/rs/lib/Cargo.toml
@@ -15,7 +15,7 @@ required-features = ["e2e_test"]
 [dependencies]
 http = { version = "1" }
 async-trait = "0.1.64"
-rand = { version = "0.7" }
+rand = { version = "0.8", features = ["getrandom"] }
 serde_json = "1.0"
 sha2 = "0.9"
 data-encoding = "2.1.2"
