Add pref changes for android day zero expt
Remove rewards bottom banner as it's onselete

Refactor NTPUtil class

--- a/browser/sources.gni
+++ b/browser/sources.gni
@@ -17,7 +17,6 @@ import("//brave/browser/brave_vpn/sources.gni")
 import("//brave/browser/brave_wallet/android/sources.gni")
 import("//brave/browser/brave_wallet/notifications/sources.gni")
 import("//brave/browser/browsing_data/sources.gni")
-import("//brave/browser/day_zero_browser_ui_expt/android/sources.gni")
 import("//brave/browser/debounce/sources.gni")
 import("//brave/browser/download/sources.gni")
 import("//brave/browser/ephemeral_storage/sources.gni")
@@ -340,6 +339,8 @@ if (ethereum_remote_client_enabled) {
 if (is_android) {
   brave_chrome_browser_sources += [
     "//brave/browser/android/brave_init_android.cc",
+    "//brave/browser/day_zero_browser_ui_expt/day_zero_browser_ui_expt_manager.cc",
+    "//brave/browser/day_zero_browser_ui_expt/day_zero_browser_ui_expt_manager.h",
     "//brave/browser/sync/brave_sync_devices_android.cc",
     "//brave/browser/sync/brave_sync_devices_android.h",
     "//chrome/browser/bookmarks/bookmark_html_writer.cc",
@@ -350,9 +351,7 @@ if (is_android) {
 
   brave_chrome_browser_sources += brave_browser_brave_wallet_android_sources
   brave_chrome_browser_sources += brave_browser_misc_metrics_android_sources
-  brave_chrome_browser_sources += brave_browser_day_zero_browser_ui_expt_sources
   brave_chrome_browser_deps += brave_browser_brave_wallet_android_deps
-  brave_chrome_browser_deps += brave_browser_day_zero_browser_ui_expt_deps
 
   brave_chrome_browser_deps += [
     "//brave/browser/android:android_browser_process",
