Remove brave::IsRegularProfile and brave::IsGuestProfile with upstream ones
Our own util is no longer needed after changes in the upstream implementation.

--- a/browser/brave_rewards/BUILD.gn
+++ b/browser/brave_rewards/BUILD.gn
@@ -12,8 +12,8 @@ source_set("util") {
   ]
 
   deps = [
-    "//brave/browser/profiles:util",
     "//brave/components/brave_rewards/common",
+    "//chrome/browser/profiles:profile",
     "//components/prefs",
   ]
 }
