Add resource bundle export

--- a/ios/BUILD.gn
+++ b/ios/BUILD.gn
@@ -7,6 +7,7 @@ import("//brave/build/config.gni")
 import("//brave/build/ios/config.gni")
 import("//brave/build/ios/create_xcframework.gni")
 import("//brave/build/mac/tweak_info_plist.gni")
+import("//brave/ios/app/resources/headers.gni")
 import("//brave/ios/browser/api/ads/headers.gni")
 import("//brave/ios/browser/api/ai_chat/headers.gni")
 import("//brave/ios/browser/api/brave_rewards/headers.gni")
@@ -89,6 +90,7 @@ brave_core_public_headers = [
 
 brave_core_public_headers += ads_public_headers
 brave_core_public_headers += ai_chat_public_headers
+brave_core_public_headers += app_resources_public_headers
 brave_core_public_headers += brave_shields_public_headers
 brave_core_public_headers += browser_api_url_sanitizer_public_headers
 brave_core_public_headers += browser_url_sanitizer_public_headers
@@ -165,6 +167,7 @@ ios_framework_bundle("brave_core_ios_framework") {
 
   deps += ads_public_deps
   deps += ai_chat_public_deps
+  deps += app_resources_public_deps
   deps += brave_wallet_public_deps
   deps += rewards_public_deps
   deps += skus_public_deps
