--- a/components/brave_wallet/browser/BUILD.gn
+++ b/components/brave_wallet/browser/BUILD.gn
@@ -339,6 +339,8 @@ source_set("utils") {
   sources = [
     "brave_wallet_utils.cc",
     "brave_wallet_utils.h",
+    "network_manager.cc",
+    "network_manager.h",
   ]
 
   deps = [
