--- a/ui/webui/resources/BUILD.gn
+++ b/ui/webui/resources/BUILD.gn
@@ -174,6 +174,7 @@ leo_icons = [
   "brave-icon-search-color.svg",
   "brave-search-big-color.svg",
   "browser-extensions.svg",
+  "browser-home.svg",
   "browser-ntp-widget.svg",
   "carat-down.svg",
   "carat-first.svg",
