--- a/chromium_src/ios/chrome/browser/shared/model/prefs/BUILD.gn
+++ b/chromium_src/ios/chrome/browser/shared/model/prefs/BUILD.gn
@@ -8,6 +8,7 @@ import("//brave/components/ipfs/buildflags/buildflags.gni")
 group("prefs") {
   deps = [
     "//brave/components/brave_ads/core",
+    "//brave/components/brave_news/common",
     "//brave/components/brave_rewards/common",
     "//brave/components/brave_shields/core/common",
     "//brave/components/brave_sync:prefs",
