--- a/components/brave_news/common/BUILD.gn
+++ b/components/brave_news/common/BUILD.gn
@@ -9,7 +9,10 @@ import("//mojo/public/tools/bindings/mojom.gni")
 source_set("unit_tests") {
   testonly = true
 
-  sources = [ "subscriptions_snapshot_unittest.cc" ]
+  sources = [
+    "locales_helper_unittest.cc",
+    "subscriptions_snapshot_unittest.cc",
+  ]
 
   deps = [
     ":common",
@@ -22,6 +25,10 @@ static_library("common") {
   sources = [
     "features.cc",
     "features.h",
+    "locales_helper.cc",
+    "locales_helper.h",
+    "p3a_pref_names.cc",
+    "p3a_pref_names.h",
     "pref_names.cc",
     "pref_names.h",
     "subscriptions_snapshot.cc",
@@ -29,8 +36,12 @@ static_library("common") {
     "switches.h",
   ]
 
+  public_deps = [ ":mojom" ]
+
   deps = [
     "//base",
+    "//brave/components/l10n/common",
+    "//brave/components/p3a_utils",
     "//components/prefs",
     "//url",
   ]
