--- a/components/brave_wallet/browser/zcash/rust/Cargo.toml
+++ b/components/brave_wallet/browser/zcash/rust/Cargo.toml
@@ -8,6 +8,8 @@ license = "MPL-2.0"
 brave_wallet = { version = "1" }
 cxx = { version = "1" }
 orchard = { version = "0.8.0",  default-features = false }
+rand = "0.8"
+zcash_primitives  = { version = "0.15.1", default-features = false }
 
 [lib]
 name = "zcash"
