--- a/components/brave_wallet/browser/BUILD.gn
+++ b/components/brave_wallet/browser/BUILD.gn
@@ -4,6 +4,7 @@
 # You can obtain one at https://mozilla.org/MPL/2.0/.
 
 import("//brave/build/config.gni")
+import("//brave/components/brave_wallet/common/config.gni")
 import("//build/config/features.gni")
 import("//third_party/protobuf/proto_library.gni")
 import("//tools/json_schema_compiler/json_schema_api.gni")
@@ -219,6 +220,12 @@ static_library("browser") {
     "wallet_data_files_installer_delegate.h",
     "zcash/zcash_block_tracker.cc",
     "zcash/zcash_block_tracker.h",
+    "zcash/zcash_create_transparent_transaction_task.cc",
+    "zcash/zcash_create_transparent_transaction_task.h",
+    "zcash/zcash_discover_next_unused_zcash_address_task.cc",
+    "zcash/zcash_discover_next_unused_zcash_address_task.h",
+    "zcash/zcash_get_transparent_utxos_context.cc",
+    "zcash/zcash_get_transparent_utxos_context.h",
     "zcash/zcash_grpc_utils.cc",
     "zcash/zcash_grpc_utils.h",
     "zcash/zcash_rpc.cc",
@@ -235,8 +242,6 @@ static_library("browser") {
     "zcash/zcash_tx_state_manager.h",
     "zcash/zcash_wallet_service.cc",
     "zcash/zcash_wallet_service.h",
-    "zcash/zcash_wallet_service_tasks.cc",
-    "zcash/zcash_wallet_service_tasks.h",
   ]
   deps = [
     ":constants",
@@ -292,6 +297,14 @@ static_library("browser") {
   ]
 
   public_deps = [ "//brave/components/api_request_helper" ]
+
+  if (enable_orchard) {
+    sources += [
+      "zcash/zcash_create_shield_all_transaction_task.cc",
+      "zcash/zcash_create_shield_all_transaction_task.h",
+    ]
+    deps += [ "internal:orchard_bundle" ]
+  }
 
   configs += [ ":sardine_config" ]
 }
