--- a/components/brave_wallet/browser/internal/BUILD.gn
+++ b/components/brave_wallet/browser/internal/BUILD.gn
@@ -34,9 +34,16 @@ source_set("hd_key") {
       "hd_key_zip32.cc",
       "hd_key_zip32.h",
     ]
-    deps += [
-      "//brave/components/brave_wallet/browser/zcash/rust",
-      "//brave/components/brave_wallet/common:buildflags",
+    deps += [ "//brave/components/brave_wallet/browser/zcash/rust" ]
+  }
+}
+
+if (enable_orchard) {
+  source_set("orchard_bundle") {
+    sources = [
+      "orchard_bundle_manager.cc",
+      "orchard_bundle_manager.h",
     ]
+    deps = [ "//brave/components/brave_wallet/browser/zcash/rust" ]
   }
 }
