--- a/components/brave_wallet/browser/test/BUILD.gn
+++ b/components/brave_wallet/browser/test/BUILD.gn
@@ -106,9 +106,6 @@ source_set("brave_wallet_unit_tests") {
     "//brave/components/brave_wallet/browser/zcash/zcash_serializer_unittest.cc",
     "//brave/components/brave_wallet/browser/zcash/zcash_wallet_service_unittest.cc",
   ]
-  if (enable_orchard) {
-    sources += [ "//brave/components/brave_wallet/browser/internal/hd_key_zip32_unittest.cc" ]
-  }
 
   deps = [
     ":test_data",
@@ -151,6 +148,15 @@ source_set("brave_wallet_unit_tests") {
     "//ui/base:base",
     "//url",
   ]
+
+  if (enable_orchard) {
+    sources += [
+      "//brave/components/brave_wallet/browser/internal/hd_key_zip32_unittest.cc",
+      "//brave/components/brave_wallet/browser/internal/orchard_bundle_manager_unittest.cc",
+    ]
+    deps +=
+        [ "//brave/components/brave_wallet/browser/internal:orchard_bundle" ]
+  }
 
   if (!is_ios) {
     deps += [
