--- a/components/brave_wallet/browser/zcash/rust/BUILD.gn
+++ b/components/brave_wallet/browser/zcash/rust/BUILD.gn
@@ -20,7 +20,11 @@ group("rust") {
 source_set("orchard_headers") {
   visibility = [ ":*" ]
 
-  sources = [ "extended_spending_key.h" ]
+  sources = [
+    "authorized_orchard_bundle.h",
+    "extended_spending_key.h",
+    "unauthorized_orchard_bundle.h",
+  ]
 
   public_deps = [
     "//base",
@@ -32,8 +36,12 @@ source_set("orchard_impl") {
   visibility = [ ":rust" ]
 
   sources = [
+    "authorized_orchard_bundle_impl.cc",
+    "authorized_orchard_bundle_impl.h",
     "extended_spending_key_impl.cc",
     "extended_spending_key_impl.h",
+    "unauthorized_orchard_bundle_impl.cc",
+    "unauthorized_orchard_bundle_impl.h",
   ]
 
   deps = [
@@ -55,7 +63,9 @@ rust_static_library("rust_lib") {
   cxx_bindings = [ "lib.rs" ]
 
   deps = [
+    "librustzcash:zcash_primitives",
     "//brave/components/brave_wallet/rust:rust_lib",
     "//brave/third_party/rust/orchard/v0_8:lib",
+    "//brave/third_party/rust/rand/v0_8:lib",
   ]
 }
