Add --variations-pr flag support.

--- a/app/BUILD.gn
+++ b/app/BUILD.gn
@@ -120,6 +120,7 @@ source_set("unit_tests") {
   deps = [
     "//base",
     "//base/test:test_support",
+    "//brave/components/variations:buildflags",
     "//chrome/browser",
     "//chrome/browser/enterprise/connectors/analysis:features",
     "//chrome/browser/ui",
