--- a/ios/app/BUILD.gn
+++ b/ios/app/BUILD.gn
@@ -74,9 +74,7 @@ source_set("app") {
     "//components/sync/base",
     "//components/sync/service",
     "//components/variations",
-    "//ios/chrome/app:app_internal",
     "//ios/chrome/app:tests_fake_hook",
-    "//ios/chrome/app/startup:startup",
     "//ios/chrome/app/startup:startup_basic",
     "//ios/chrome/browser/bookmarks/model",
     "//ios/chrome/browser/browser_state/model",
@@ -86,14 +84,21 @@ source_set("app") {
     "//ios/chrome/browser/main/model",
     "//ios/chrome/browser/passwords/model:store_factory",
     "//ios/chrome/browser/providers/ui_utils:chromium_ui_utils",
+    "//ios/chrome/browser/sessions",
     "//ios/chrome/browser/shared/model/application_context",
     "//ios/chrome/browser/shared/model/browser_state",
     "//ios/chrome/browser/shared/model/paths",
     "//ios/chrome/browser/shared/model/web_state_list",
     "//ios/chrome/browser/shared/public/commands",
     "//ios/chrome/browser/sync/model",
+    "//ios/chrome/browser/tabs/model:tabs_internal",
+    "//ios/chrome/browser/ui/authentication/signin",
+    "//ios/chrome/browser/ui/settings",
+    "//ios/chrome/browser/ui/sharing:sharing_internal",
     "//ios/chrome/browser/webui/ui_bundled:webui_internal",
     "//ios/chrome/common",
+    "//ios/chrome/common/credential_provider",
+    "//ios/public/provider/chrome/browser/app_utils:app_utils_api",
     "//ios/public/provider/chrome/browser/font:font_api",
     "//ios/public/provider/chrome/browser/overrides:overrides_api",
     "//ios/public/provider/chrome/browser/ui_utils:ui_utils_api",
@@ -115,5 +120,6 @@ source_set("app") {
   frameworks = [
     "Foundation.framework",
     "UIKit.framework",
+    "MessageUI.framework",
   ]
 }
