--- a/ios/browser/api/favicon/BUILD.gn
+++ b/ios/browser/api/favicon/BUILD.gn
@@ -21,7 +21,7 @@ source_set("favicon") {
     "//ios/chrome/browser/favicon/model",
     "//ios/chrome/browser/shared/model/application_context",
     "//ios/chrome/browser/shared/model/browser_state",
-    "//ios/chrome/common/ui/favicon",
+    "//ios/chrome/common/ui/favicon:favicon",
     "//ios/chrome/common/ui/favicon:favicon_constants",
     "//ios/web/favicon",
     "//ios/web/js_messaging",
