[Rewards 3.0] Add unconnected counter card

--- a/components/brave_rewards/common/mojom/BUILD.gn
+++ b/components/brave_rewards/common/mojom/BUILD.gn
@@ -41,5 +41,8 @@ mojom("webui") {
 
   public_deps = [ "//mojo/public/mojom/base" ]
 
-  deps = [ ":mojom" ]
+  deps = [
+    ":mojom",
+    "//brave/components/services/bat_ads/public/interfaces",
+  ]
 }
