--- a/ui/webui/resources/BUILD.gn
+++ b/ui/webui/resources/BUILD.gn
@@ -383,6 +383,7 @@ leo_icons = [
   "warning-triangle-filled.svg",
   "warning-triangle-outline.svg",
   "web3.svg",
+  "web3-blockexplorer.svg",
   "web3-bridge.svg",
   "widget-generic.svg",
   "window-content.svg",
