--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "@types/chrome": "0.0.241",
     "@types/dom-navigation": "1.0.3",
     "@types/jest": "26.0.24",
+    "@types/node-forge": "^1.3.11",
     "@types/qr-image": "3.2.5",
     "@types/react": "18.2.75",
     "@types/react-dom": "18.2.24",
@@ -193,7 +194,10 @@
     "core-js": "^3.9.1",
     "date-fns": "^2.15.0",
     "jszip": "^3.8.0",
+    "node-forge": "^1.3.1",
+    "node-signpdf": "^3.0.0",
     "page-metadata-parser": "^1.1.3",
+    "pdf-lib": "^1.17.1",
     "prettier-bytes": "^1.0.4",
     "qr-image": "^3.2.0",
     "react-json-view-lite": "^0.9.5",
