Updated history page's item font style
fix https://github.com/brave/brave-browser/issues/39722

--- a/browser/resources/history/sources.gni
+++ b/browser/resources/history/sources.gni
@@ -7,6 +7,7 @@ brave_history_web_component_files = [ "brave_history_item.ts" ]
 
 brave_history_non_web_component_files = [
   "brave_overrides/app.ts",
+  "brave_overrides/history_item.ts",
   "brave_overrides/side_bar.ts",
   "brave_overrides/index.ts",
 ]
