feat(wallet) Add Explore Web3 Page (#23297)
* feat: add explore web3 page

* Changed description color

* Make virtual dapp list full height

* Added strings

* WIP: Added filtering of dapps by categories and networks

* Complete dapp filters

* Added categories to dapps view

* Added filters and filter removal to dapps UI

* Added strings

* Added strings, refactored

* Fix string

* Refactor filters to a component, wrap label in a button

* Fix filters tag display

* Remove mock-dapps-list.ts from build excluded files

* Check https urls for dapps

* Reduce mock data

* Feedback changes

* Use useGetNetworksRegistryQuery

* Remove console.log

* Use width instead of fullWidth for more reusability

* Fix presubmit warnings

* Update leo CSS variables import

* implement ui feedback

* refactor: Simplify isHttpsUrl function implementation

* chore: Update local storage keys and remove unused imports

* fix(wallet): remove duplicate locale strings

* fix(wallet): dapp filtering logic

* chore(storybook): fix web3 dapp explorer stories

* fix(wallet): improve dapp filtering by chain

* fix(wallet): remove unneeded toString call from makeDappDetailsRoute util

* chore(wallet): fix long descriptions in mocked dapps list

* fix(wallet): remove empty chainId var from wallet mojom

* fix(wallet): clear filter list when last filter item is removed

* perf(wallet): only cache full dapps lists

* style(wallet): use button element for top dapps list item

* fix(wallet): update hook deps in nav button

---------

Co-authored-by: Josh Leonard <30185185+josheleonard@users.noreply.github.com>

--- a/ui/webui/resources/BUILD.gn
+++ b/ui/webui/resources/BUILD.gn
@@ -223,6 +223,7 @@ leo_icons = [
   "file-corrupted.svg",
   "file-edit.svg",
   "file.svg",
+  "filter.svg",
   "filter-settings.svg",
   "flash.svg",
   "flashdrive.svg",
