--- a/components/brave_news/common/BUILD.gn
+++ b/components/brave_news/common/BUILD.gn
@@ -6,15 +6,39 @@
 import("//brave/build/config.gni")
 import("//mojo/public/tools/bindings/mojom.gni")
 
+source_set("unit_tests") {
+  testonly = true
+
+  sources = [ "locales_helper_unittest.cc" ]
+
+  deps = [
+    ":common",
+    "//base",
+    "//testing/gtest",
+  ]
+}
+
 static_library("common") {
   sources = [
     "features.cc",
     "features.h",
+    "locales_helper.cc",
+    "locales_helper.h",
+    "p3a_pref_names.cc",
+    "p3a_pref_names.h",
+    "pref_names.cc",
     "pref_names.h",
     "switches.h",
   ]
 
-  deps = [ "//base" ]
+  public_deps = [ ":mojom" ]
+
+  deps = [
+    "//base",
+    "//brave/components/l10n/common",
+    "//brave/components/p3a_utils",
+    "//components/prefs",
+  ]
 }
 
 mojom("mojom") {
