Enable "Variations" and "Shutdown" upstream tests.

--- a/base/BUILD.gn
+++ b/base/BUILD.gn
@@ -20,6 +20,7 @@ source_set("base_unittests") {
   sources = [
     "build_time_unittest.cc",
     "feature_override_unittest.cc",
+    "test/current_test_vendor_is_brave_unittest.cc",
     "test/launcher/teamcity_reporter_integration_unittest.cc",
     "test/launcher/teamcity_reporter_unittest.cc",
     "test/launcher/teamcity_service_messages_unittest.cc",
