--- a/test/BUILD.gn
+++ b/test/BUILD.gn
@@ -156,6 +156,7 @@ test("brave_unit_tests") {
     "//brave/app:command_ids",
     "//brave/app:unit_tests",
     "//brave/base:base_unittests",
+    "//brave/base/test:test_vendor_is_brave",
     "//brave/brave_domains:unit_tests",
     "//brave/browser",
     "//brave/browser:unit_tests",
@@ -599,6 +600,7 @@ if (!is_android) {
     deps = [
       "//base/test:run_all_unittests",
       "//base/test:test_support",
+      "//brave/base/test:test_vendor_is_brave",
     ]
 
     if (is_mac) {
@@ -689,6 +691,7 @@ if (!is_android) {
 
     deps = [
       "//base",
+      "//brave/base/test:test_vendor_is_brave",
       "//brave/components/brave_rewards/browser",
       "//chrome/browser",
       "//chrome/browser/profiles:profile",
@@ -832,6 +835,7 @@ test("brave_browser_tests") {
     "//brave/app:brave_generated_resources_grit",
     "//brave/app:browser_tests",
     "//brave/app:command_ids",
+    "//brave/base/test:test_vendor_is_brave",
     "//brave/browser",
     "//brave/browser/autoplay:browser_tests",
     "//brave/browser/brave_ads:browser_tests",
@@ -847,6 +851,7 @@ test("brave_browser_tests") {
     "//brave/browser/extensions",
     "//brave/browser/extensions:test_support",
     "//brave/browser/farbling:browser_tests",
+    "//brave/browser/metrics:browser_tests",
     "//brave/browser/metrics/buildflags",
     "//brave/browser/misc_metrics:browser_tests",
     "//brave/browser/net:browser_tests",
