--- a/browser/ui/BUILD.gn
+++ b/browser/ui/BUILD.gn
@@ -305,6 +305,7 @@ source_set("ui") {
       "//brave/browser/profiles:util",
       "//brave/common",
       "//brave/components/constants",
+      "//brave/components/misc_metrics",
       "//brave/components/sidebar/browser",
       "//brave/components/sidebar/common",
       "//chrome/app:generated_resources",
