--- a/test/BUILD.gn
+++ b/test/BUILD.gn
@@ -322,6 +322,10 @@ test("brave_unit_tests") {
     "//brave/components/brave_stats/browser",
   ]
 
+  if (is_win) {
+    deps += [ "//brave/browser/day_zero_browser_ui_expt:unit_tests" ]
+  }
+
   if (enable_tor) {
     deps += [
       "//brave/browser/tor/test:unit_tests",
@@ -995,6 +999,7 @@ test("brave_browser_tests") {
 
   if (is_win) {
     public_configs = [ "//build/config/win:delayloads" ]
+    deps += [ "//brave/browser/day_zero_browser_ui_expt:browser_tests" ]
   }
 
   if (use_aura) {
