--- a/.github/workflows/sync-pr-from-fork.yml
+++ b/.github/workflows/sync-pr-from-fork.yml
@@ -46,5 +46,5 @@ jobs:
 
           existing_prs=$(gh pr list -H "$contribHeadRefName" --json number)
           if [[ "$existing_prs" = "[]" ]]; then
-            gh pr create --draft --body-file ".github/PULL_REQUEST_TEMPLATE.md" --base "$baseRefName" --head "$contribHeadRefName" --assignee "$headRepositoryOwnerLogin" --title "CI run for #$PR_NUMBER"
+            gh pr create --draft --base "$baseRefName" --head "$contribHeadRefName" --assignee "$headRepositoryOwnerLogin" --title "CI run for contributor PR #$PR_NUMBER" --body "CI run for contributor PR #$PR_NUMBER (do not merge)"
           fi
