--- a/android/java/AndroidManifest.xml
+++ b/android/java/AndroidManifest.xml
@@ -155,15 +155,12 @@
     android:noHistory="true"
     android:launchMode="singleTask"/>
 
-<meta-data
-        android:name="com.google.android.play.billingclient.version"
-        android:value="6.0.1" />
-
 <activity android:name="com.android.billingclient.api.ProxyBillingActivity"
     android:theme="@style/BraveProxyBillingActivityTheme"
     android:exported="false"
     android:screenOrientation="sensorPortrait"
-    tools:ignore="LockedOrientationActivity,DiscouragedApi"/>
+    tools:ignore="LockedOrientationActivity,DiscouragedApi"
+    tools:node="replace" />
 
 <!-- Upgrade related -->
 <receiver android:name="org.chromium.chrome.browser.upgrade.BravePackageReplacedBroadcastReceiver"
