Removed one-day expiration from day-zero experiment
fix https://github.com/brave/brave-browser/issues/39810

We don't want to stop day-zero experiment after 1d passed.
This experiment will last till feature is enabled.

This feature is only applied to fresh install.

--- a/browser/day_zero_browser_ui_expt/BUILD.gn
+++ b/browser/day_zero_browser_ui_expt/BUILD.gn
@@ -27,7 +27,6 @@ source_set("unit_tests") {
 }
 
 source_set("browser_tests") {
-if (is_win) {
   testonly = true
   defines = [ "HAS_OUT_OF_PROC_TEST_RUNNER" ]
 
@@ -37,10 +36,10 @@ if (is_win) {
     "//base",
     "//brave/components/brave_rewards/common",
     "//chrome/browser",
+    "//chrome/browser:browser_process",
     "//chrome/browser/ui",
     "//chrome/test:test_support_ui",
     "//components/prefs",
     "//content/test:test_support",
   ]
-  }
 }
