--- a/browser/day_zero_browser_ui_expt/BUILD.gn
+++ b/browser/day_zero_browser_ui_expt/BUILD.gn
@@ -17,6 +17,7 @@ source_set("unit_tests") {
     "//brave/components/brave_wallet/browser:pref_names",
     "//brave/components/ntp_background_images/browser",
     "//brave/components/ntp_background_images/common",
+    "//brave/components/p3a",
     "//chrome/browser/ui",
     "//chrome/test:test_support",
     "//components/prefs",
