--- a/.github/workflows/sync-pr-from-fork.yml
+++ b/.github/workflows/sync-pr-from-fork.yml
@@ -46,5 +46,5 @@ jobs:
 
           existing_prs=$(gh pr list -H "$contribHeadRefName" --json number)
           if [[ "$existing_prs" = "[]" ]]; then
-            gh pr create --draft --base "$baseRefName" --head "$contribHeadRefName" --assignee "$headRepositoryOwnerLogin" --title "CI run for contributor PR #$PR_NUMBER" --body "For #$PR_NUMBER (do not merge)"
+            gh pr create --draft --base "$baseRefName" --head "$contribHeadRefName" --assignee "$headRepositoryOwnerLogin" --title "CI run for contributor PR #$PR_NUMBER" --body "## Description\nThis PR is created to run CI on the changes proposed in PR #$PR_NUMBER by @$headRepositoryOwnerLogin.\n\n**This PR should not be merged.**"
           fi
