--- a/browser/farbling/BUILD.gn
+++ b/browser/farbling/BUILD.gn
@@ -11,6 +11,7 @@ if (!is_android) {
     sources = [
       "brave_dark_mode_fingerprint_protection_browsertest.cc",
       "brave_enumeratedevices_farbling_browsertest.cc",
+      "brave_farbling_based_on_profiles_browsertest.cc",
       "brave_font_whitelist_browsertest.cc",
       "brave_navigator_devicememory_farbling_browsertest.cc",
       "brave_navigator_hardwareconcurrency_farbling_browsertest.cc",
