chrome/browser/ui/views/bubble now has its own GN target.
Chromium change:

https://source.chromium.org/chromium/chromium/src/+/8082f991b5f642e1900879b82e4acabc0a44b919

commit 8082f991b5f642e1900879b82e4acabc0a44b919
Author: Erik Chen <erikchen@chromium.org>
Date:   Tue Jul 16 06:03:49 2024 +0000

    Modularize chrome/browser/ui/views/bubble.

    This CL has no intended behavior change.

    Bug: 353332589

--- a/browser/ui/BUILD.gn
+++ b/browser/ui/BUILD.gn
@@ -580,6 +580,7 @@ source_set("ui") {
 
     deps += [
       "//chrome/browser/devtools",
+      "//chrome/browser/ui/views/bubble",
       "//components/bookmarks/browser",
     ]
 
