--- a/.github/workflows/sync-and-rebase-pr-from-fork.yml
+++ b/.github/workflows/sync-and-rebase-pr-from-fork.yml
@@ -1,4 +1,4 @@
-name: Sync PR from fork
+name: Sync and rebase PR from fork
 
 on:
   workflow_dispatch:
@@ -8,7 +8,7 @@ on:
         description: "Number of the PR from the fork"
 
 jobs:
-  sync-pr-from-fork:
+  sync-and-rebase-pr-from-fork:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -20,7 +20,7 @@ jobs:
           git config user.email devops@brave.com
           git config push.default simple
 
-      - name: Sync PR from fork
+      - name: Sync and rebase PR from fork
         env:
           GITHUB_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
           PR_NUMBER: ${{ inputs.PR_NUMBER }}
@@ -42,6 +42,14 @@ jobs:
           git remote add contributor "https://github.com/$headRepositoryOwnerLogin/$headRepositoryName.git" || :
           contribHeadRefName="contributor-$headRepositoryOwnerLogin-$headRefName"
           git fetch --no-tags contributor +"$headRefName":"$contribHeadRefName"
+
+          # Rebase the branch with the latest targeting branch HEAD
+          git fetch origin "$baseRefName"
+          git checkout "$contribHeadRefName"
+          if ! git rebase origin/"$baseRefName"; then
+            echo "Rebase conflict detected. Please resolve the conflicts and push the changes to your fork. Exiting!"
+            exit 1
+          fi
           git push -f origin "$contribHeadRefName"
 
           existing_prs=$(gh pr list -H "$contribHeadRefName" --json number)
