Ensure background color is set on a new tab.

--- a/browser/new_tab/sources.gni
+++ b/browser/new_tab/sources.gni
@@ -10,9 +10,17 @@ if (!is_android) {
   brave_browser_new_tab_sources += [
     "//brave/browser/new_tab/new_tab_shows_navigation_throttle.cc",
     "//brave/browser/new_tab/new_tab_shows_navigation_throttle.h",
+    "//brave/browser/new_tab/new_tab_shows_navigation_throttle.h",
     "//brave/browser/new_tab/new_tab_shows_options.cc",
     "//brave/browser/new_tab/new_tab_shows_options.h",
   ]
+
+  if (is_win) {
+    brave_browser_new_tab_sources += [
+      "//brave/browser/new_tab/background_color_tab_helper.cc",
+      "//brave/browser/new_tab/background_color_tab_helper.h",
+    ]
+  }
 
   brave_browser_new_tab_deps += [
     "//base",
