--- a/browser/new_tab/BUILD.gn
+++ b/browser/new_tab/BUILD.gn
@@ -3,6 +3,25 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this file,
 # You can obtain one at http://mozilla.org/MPL/2.0/.
 
+source_set("browser_tests") {
+  testonly = true
+
+  if (is_win) {
+    sources = [ "background_color_tab_helper_browsertest.cc" ]
+    deps = [
+      "//brave/browser/themes",
+      "//chrome/browser",
+      "//chrome/browser:browser_process",
+      "//chrome/browser/profiles:profile",
+      "//chrome/browser/ui",
+      "//chrome/test:test_support",
+      "//chrome/test:test_support_ui",
+    ]
+
+    defines = [ "HAS_OUT_OF_PROC_TEST_RUNNER" ]
+  }
+}
+
 source_set("unittest") {
   testonly = true
 
