--- a/test/BUILD.gn
+++ b/test/BUILD.gn
@@ -855,6 +855,7 @@ test("brave_browser_tests") {
     "//brave/browser/metrics/buildflags",
     "//brave/browser/misc_metrics:browser_tests",
     "//brave/browser/net:browser_tests",
+    "//brave/browser/new_tab:browser_tests",
     "//brave/browser/permissions:browser_tests",
     "//brave/browser/profiles",
     "//brave/browser/psst:browser_tests",
