--- a/package.json
+++ b/package.json
@@ -174,8 +174,8 @@
   },
   "dependencies": {
     "@brave/brave-ui": "0.40.6",
-    "@brave/leo": "github:brave/leo#update-tokens",
-    "@brave/leo-sf-symbols": "github:brave/leo-sf-symbols#f66f5701f8330253c1c113228c08f129178941c2",
+    "@brave/leo": "github:brave/leo#8f981cd78e484cd97348855350ab5ade2f3dc1db",
+    "@brave/leo-sf-symbols": "github:brave/leo-sf-symbols#8685eec0851afa96d23dd424cd152854476e585d",
     "@brave/wallet-standard-brave": "0.0.13",
     "@dnd-kit/core": "6.0.5",
     "@dnd-kit/sortable": "7.0.1",
