--- a/package.json
+++ b/package.json
@@ -180,9 +180,10 @@
     "@dnd-kit/core": "6.0.5",
     "@dnd-kit/sortable": "7.0.1",
     "@glif/filecoin-wallet-provider": "2.0.0-beta.12",
+    "@ledgerhq/hw-app-btc": "10.3.0",
     "@ledgerhq/hw-app-eth": "6.24.1",
     "@ledgerhq/hw-app-solana": "6.27.1",
-    "@ledgerhq/hw-transport-webhid": "6.24.1",
+    "@ledgerhq/hw-transport-webhid": "6.29.0",
     "@mozilla/readability": "^0.4.2",
     "@reduxjs/toolkit": "1.8.6",
     "@solana/web3.js": "1.91.7",
