--- a/browser/new_tab/sources.gni
+++ b/browser/new_tab/sources.gni
@@ -14,6 +14,13 @@ if (!is_android) {
     "//brave/browser/new_tab/new_tab_shows_options.h",
   ]
 
+  if (is_win) {
+    brave_browser_new_tab_sources += [
+      "//brave/browser/new_tab/background_color_tab_helper.cc",
+      "//brave/browser/new_tab/background_color_tab_helper.h",
+    ]
+  }
+
   brave_browser_new_tab_deps += [
     "//base",
     "//brave/app:brave_generated_resources_grit",
