exclusive_access was modularized.
Chromium change:

https://chromium.googlesource.com/chromium/src/+/7db7bc138cb597

commit 7db7bc138cb5977b88e1d7cc0639e6197ae6fbfe
Author: Erik Chen <erikchen@chromium.org>
Date:   Wed Jul 17 07:33:27 2024 +0000

    Modularize exclusive_access

    Bug: 339497734

--- a/browser/ui/BUILD.gn
+++ b/browser/ui/BUILD.gn
@@ -580,6 +580,7 @@ source_set("ui") {
 
     deps += [
       "//chrome/browser/devtools",
+      "//chrome/browser/ui/exclusive_access",
       "//chrome/browser/ui/views/bubble",
       "//components/bookmarks/browser",
     ]
@@ -1123,6 +1124,7 @@ source_set("ui") {
       "//brave/components/resources:static_resources",
       "//brave/components/resources:strings_grit",
       "//chrome/browser/extensions",
+      "//chrome/browser/ui/exclusive_access",
       "//components/sessions",
       "//extensions/browser",
       "//extensions/common:common_constants",
@@ -1311,6 +1313,7 @@ source_set("ui") {
     deps += [
       "//brave/components/playlist/browser",
       "//brave/components/playlist/browser/resources:generated_resources",
+      "//chrome/browser/ui/exclusive_access",
       "//components/user_prefs",
     ]
   }
