Day zero expt changes [Uplift to 1.68.x] (#24735)
* Day zero expt changes

* Merge pull request #24731 from brave/delete_1_day_timer_from_day_zero_experiment

Update day-zero browser UI experiment

* fixup! Day zero expt changes

* Fixed rewards prefs are not registered

It's registered at brave::RegisterProfilePrefs() since 1.69.x.
So, we have to register explicitly it in test code in 1.68.x

---------

Co-authored-by: Simon Hong <shong@brave.com>

--- a/browser/sources.gni
+++ b/browser/sources.gni
@@ -432,6 +432,14 @@ if (is_win) {
   ]
 }
 
+if (is_win || is_android) {
+  brave_chrome_browser_sources += [
+    "//brave/browser/day_zero_browser_ui_expt/day_zero_browser_ui_expt_manager.cc",
+    "//brave/browser/day_zero_browser_ui_expt/day_zero_browser_ui_expt_manager.h",
+    "//brave/browser/day_zero_browser_ui_expt/pref_names.h",
+  ]
+}
+
 if (is_win && is_official_build) {
   brave_chrome_browser_sources += [
     "//chrome/browser/google/google_update_win.cc",
