review(kdenhartog): Use constants for CSP values. Define CSP overrides in a shared function using constants for page, panel, android and iOS.

--- a/components/brave_wallet/browser/BUILD.gn
+++ b/components/brave_wallet/browser/BUILD.gn
@@ -337,6 +337,7 @@ source_set("constants") {
   deps = [
     "//base",
     "//brave/components/brave_wallet/common:mojom",
+    "//brave/components/constants",
     "//brave/components/resources:strings_grit",
     "//ui/base:base",
   ]
