Delete pref-based webcompat setting when it matches remote setting
Check pref-based settings whenever:
1. The remote list changes
2. A webcompat pref-setting changes

If the pref-based webcompat exception setting is the same as the
setting from the remote list, we delete the pref.

--- a/components/webcompat/core/browser/BUILD.gn
+++ b/components/webcompat/core/browser/BUILD.gn
@@ -7,19 +7,15 @@ import("//brave/build/config.gni")
 
 source_set("browser") {
   sources = [
-    "webcompat_exceptions_observer.h",
-    "webcompat_exceptions_service.cc",
-    "webcompat_exceptions_service.h",
+    "webcompat_settings_cleaning_service.cc",
+    "webcompat_settings_cleaning_service.h",
   ]
 
   deps = [
     "//base",
-    "//brave/components/brave_component_updater/browser",
-    "//components/keyed_service/core",
-    "//components/prefs",
-    "//components/user_prefs",
+    "//brave/components/webcompat/content/browser",
+    "//components/content_settings/core/browser:browser",
+    "//components/content_settings/core/common:common",
     "//content/public/browser",
-    "//net",
-    "//url",
   ]
 }
