address PR comments

--- a/browser/sources.gni
+++ b/browser/sources.gni
@@ -356,6 +356,7 @@ if (is_android) {
     "//brave/browser/android:android_browser_process",
     "//brave/browser/android/preferences",
     "//brave/browser/android/safe_browsing:buildflags",
+    "//brave/browser/android/youtube",
     "//brave/build/android:jni_headers",
     "//brave/components/brave_sync:sync_service_impl_helper",
     "//chrome/android:jni_headers",
