--- a/browser/android/preferences/BUILD.gn
+++ b/browser/android/preferences/BUILD.gn
@@ -36,6 +36,7 @@ source_set("preferences") {
 
 java_cpp_strings("java_pref_names_srcjar") {
   sources = [
+    "//brave/browser/android/youtube/pref_names.h",
     "//brave/components/brave_adaptive_captcha/pref_names.h",
     "//brave/components/brave_rewards/common/pref_names.h",
     "//brave/components/brave_shields/core/common/pref_names.h",
