Uplift of #25132 (squashed) to release

--- a/app/BUILD.gn
+++ b/app/BUILD.gn
@@ -148,6 +148,7 @@ source_set("unit_tests") {
     "//components/page_info/core",
     "//components/performance_manager",
     "//components/permissions",
+    "//components/plus_addresses:features",
     "//components/privacy_sandbox",
     "//components/safe_browsing/core/common",
     "//components/search",
@@ -156,6 +157,7 @@ source_set("unit_tests") {
     "//components/signin/public/base:signin_buildflags",
     "//components/subresource_filter/core/common",
     "//components/sync/base:features",
+    "//components/webapps/browser",
     "//gpu/config",
     "//services/device/public/cpp:device_features",
     "//services/network/public/cpp",
