[PerfTest][WIP] Add a benchmark to run multitab story test

--- a/tools/perf/configs/dashboard/smoke-brave.json5
+++ b/tools/perf/configs/dashboard/smoke-brave.json5
@@ -18,6 +18,13 @@
       ]
     },
     {
+      "name": "multitab.loading.desktop.brave",
+      "pageset-repeat": 1,
+      "stories": [
+        "example.com_cold",
+      ]
+    },
+    {
       "name": "system_health.common_desktop",
       "pageset-repeat": 1,
       "stories": [
