[iOS] Disable HTTPS-by-Default by default and wrap feature by the flag

--- a/ios/browser/api/features/BUILD.gn
+++ b/ios/browser/api/features/BUILD.gn
@@ -29,6 +29,7 @@ source_set("features") {
     "//brave/components/skus/common:common",
     "//brave/ios/browser/playlist",
     "//build:blink_buildflags",
+    "//net",
   ]
 
   frameworks = [ "Foundation.framework" ]
